# earCrawler

./: .env.example  .flake8  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Code Review 3.docx  Dep Research Output.docx  EAR_AI_Training_Proposal_redlined.docx  MANIFEST.in  README.md  RUNBOOK.md  Short Roadmap.docx  cleanup_result.json  monitor.ps1  next_prompt.txt  prompt.txt  pushCommitsAndLFS.ps1  pyproject.toml  pytest.ini  report.csv  report.json  requirements-gpu.txt  requirements-lock.txt  requirements-win-lock.txt  requirements-win.in  requirements-win.txt  requirements.in  requirements.txt  retrieval_corpus_contract.md  scaffold.ps1  setup.py  title-15.json  tryit.py
.agents/: 00-index.md  10-repo-overview.md  20-pipeline.md  30-conventions.md  40-testing-and-quality.md  50-env-and-secrets.md  60-cleanup-policy.md  70-research.md
.wheelhouse/: SPARQLWrapper-2.0.0-py3-none-any.whl  black-24.4.2-cp312-cp312-win_amd64.whl  lxml-5.2.2-cp312-cp312-win_amd64.whl  rapidfuzz-3.6.1-cp312-cp312-win_amd64.whl  requests_mock-1.11.0-py2.py3-none-any.whl  uvicorn-0.31.1-py3-none-any.whl  vcrpy-5.1.0-py2.py3-none-any.whl  wrapt-2.0.1-cp312-cp312-win_amd64.whl
Research/: AGENTS.md  EAR_AI_Training_Proposal_redlined.docx  Outlines_ISWC_SemWebJ.docx  Outlines_KDD_WWW_ACL_Industry.docx  Research_Focus_Summary.docx  Research_Manuscript_Outlines.docx  Research_Path_Variants_By_Risk_Resourcing.docx  decision_log.md  index.json  knowledge_cache.json  working_json_outline.json
api_clients/: __init__.py  ear_api_client.py  federal_register_client.py  federalregister_client.py  llm_client.py  ori_client.py  tradegov_client.py  upstream_status.py
canary/: config.yml
cli/: __init__.py  kg_emit.py  kg_validate.py
config/: llm_secrets.example.env  local_adapter_release_evidence.example.json  training_first_pass.example.json  training_input_contract.example.json  training_model_selection.example.env
container/: README.md  earcrawler.def
data/: checksums.sha256  fr_sections.jsonl  kg_expansion.json  manifest.json  nsf_corpus.jsonl  retrieval_corpus.jsonl
demo/: SUMMARY.txt  top_terms.json
dev/: VCT.md  vct-login.out
docker/: api.Dockerfile  mistral.Dockerfile  rag.Dockerfile
docs/: 20260130 earCrawler_Code_Improvement_Plan.docx  ExecutionPlan11.5.1_log.md  ExecutionPlan11.5.2.md  ExecutionPlan11.5.2_log.md  ExecutionPlan11.5.md  ExecutionPlan11.5_log.md  ExecutionPlanRunPass10.md  ExecutionPlanRunPass11.md  ExecutionPlanRunPass9.md  Review Pass 5.docx  RunPass11.md  RunPass8.md  RunPass9.md  answer_generation_posture.md  audit_event_requirements.md  capability_graduation_boundaries.md  ci.md  corpus_identity_adr.md  data_artifact_inventory.md  done_done_checklist.md  earCrawler_execution_plan_pass6.md  earCrawler_execution_plan_pass_5.docx  hybrid_retrieval_design.md  identifier_policy.md  kg_boundary_and_iri_strategy.md  kg_namespace_migration_plan.md  kg_quarantine_exit_gate.md  kg_search_status_decision_2026-03-10.md  kg_semantic_blocking_checks.md  kg_unquarantine_plan.md  local_adapter_capability_decision_2026-04-06.md  local_adapter_deprioritization_2026-03-25.md  local_adapter_reactivation_2026-03-27.md  local_adapter_release_evidence.md  maintainer_start_here.md  model_training_contract.md  model_training_first_pass.md  model_training_surface_adr.md  offline_snapshot_spec.md  perf_memory_review.md  (+23 more)
earCrawler/: .gitignore  CHANGELOG.md  README.md  __init__.py  requirements.txt
eval/: collect_benchmark.sh  ear_compliance.v1.jsonl  ear_compliance.v2.jsonl  entity_obligations.v1.jsonl  entity_obligations.v2.jsonl  golden_phase2.failure_modes.v1.jsonl  golden_phase2.v1.jsonl  manifest.json  multihop_slice.v1.jsonl  phase2_groundedness_gates.json  pilot_items.jsonl  schema.json  unanswerable.v1.jsonl  unanswerable.v2.jsonl  validate_datasets.py
installer/: earcrawler.iss
kg/: .kgstate_check.json  ear.ttl  ear_export_manifest.json  ear_ontology.ttl  shapes_prov.ttl
monitor/: watchlist.json
packaging/: earctl.spec
scripts/: __init__.py  api-service-smoke.ps1  api-smoke.ps1  api-start.ps1  api-stop.ps1  api_perf_smoke.py  apply_working_outline.py  attest-sbom.ps1  auto-pr.ps1  baseline.ps1  benchmark.py  benchmark_queries.json  bootstrap-verify.ps1  build-exe.ps1  build-offline-bundle.ps1  build-release.ps1  build-wheel.ps1  build-wheelhouse.ps1  changelog-update.ps1  (+46 more)
(+713 files in other folders)
