[project]
name = "earCrawler"
version = "0.2.5"
description = "EAR AI ingestion, RAG, and analytics pipeline"
authors = [{ name = "EAR AI Team", email = "maintainers@ear.ai" }]
license = { text = "MIT" }
dependencies = [
  "click>=8.0",
  "requests>=2.31.0",
  "fastapi>=0.85.0",
  "SPARQLWrapper>=1.8.5",
  "tabulate>=0.8.9",
  "beautifulsoup4>=4.12.0",
  "rdflib==6.3.2",
  "pyshacl==0.25.0",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
gpu = [
  "accelerate>=0.32.0",
  "bitsandbytes==0.43.1; sys_platform != \"win32\"",
  "datasets==2.20.0",
  "faiss-cpu==1.8.0; sys_platform != \"win32\"",
  "peft==0.11.1",
  "sentence-transformers==2.2.2",
  "torch==2.3.0",
  "transformers==4.39.3",
]

[project.scripts]
earctl = "earCrawler.cli:main"
kg-validate = "cli.kg_validate:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["earCrawler*", "api_clients*", "perf*", "cli*", "scripts*"]
namespaces = true

[tool.setuptools.package-data]
"earCrawler.kg" = ["shapes.ttl", "data/*.json"]
"earCrawler.sparql" = ["*.sparql"]

[tool.setuptools.data-files]
"docs/privacy" = ["docs/privacy/telemetry_policy.md", "docs/privacy/redaction_rules.md"]
