[project]
name = "earCrawler"
version = "0.2.5"
description = "EAR AI ingestion, RAG, and analytics pipeline"
authors = [{ name = "EAR AI Team", email = "maintainers@ear.ai" }]
license = { text = "MIT" }
dependencies = [
  "click>=8.0",
  "requests>=2.31.0",
  "fastapi>=0.85.0",
  "httpx>=0.28.1",
  "keyring>=24.3.1",
  "SPARQLWrapper>=1.8.5",
  "tabulate>=0.8.9",
  "tenacity>=8.2.3",
  "beautifulsoup4>=4.12.0",
  "rdflib==6.3.2",
  "pyshacl==0.25.0",
  "PyYAML>=6.0",
  "uvicorn>=0.31.1",
]

[project.optional-dependencies]
gpu = [
  "faiss-cpu==1.8.0; sys_platform != \"win32\"",
  "sentence-transformers==5.3.0",
  "torch==2.4.1",
  "torchvision==0.19.1",
  "transformers==5.5.0",
  "peft==0.18.1",
  "accelerate==1.13.0",
  "bitsandbytes==0.49.2",
  "huggingface_hub==1.9.1",
  "trl==1.0.0",
]

[project.scripts]
earctl = "earCrawler.cli:main"
kg-validate = "earCrawler.cli.legacy_entrypoints:kg_validate_main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["earCrawler*", "api_clients*", "perf*", "cli*", "scripts*", "service*"]
namespaces = true

[tool.setuptools.package-data]
"earCrawler.kg" = ["shapes.ttl", "shapes_prov.ttl", "data/*.json"]
"earCrawler.security" = ["default_policy.yml"]
"earCrawler.sparql" = ["*.sparql", "*.rq"]
"service" = ["config/*.yml", "docs/*.md", "docs/*.json", "openapi/*.yaml", "templates/*.json", "templates/*.rq"]

[tool.setuptools.data-files]
"docs/privacy" = ["docs/privacy/telemetry_policy.md", "docs/privacy/redaction_rules.md"]

[tool.coverage.run]
source = ["earCrawler", "api_clients", "service", "cli"]

[tool.coverage.report]
fail_under = 75
show_missing = true
skip_covered = true
